--- a/releases/v1.2.1.md
+++ b/releases/v1.2.1.md
@@ -2,6 +2,8 @@
 
 ## Changes in this release
 
+- refactor(release): improve release process and npm   publishing
+- chore: bump version to 1.2.1 for release
 - Fixed fs synchronous and asynchronous method   handling across codebase
 - release notes v1.2.0
 - feat(npm): add npm publishing to GitHub workflows
@@ -10,8 +12,6 @@
 - feat(npm): add npm package   support with CLI tools and   user data directory
 - test: skip failing tests in token optimization modules        …
 - test(mcp): implement card-first architecture   …       tests and mocks
-- feat(token-optimization): implement and test MCP toke…        optimization
-- refactor: implement card-first architecture                                  …
 
 ## Getting Started
 See the [README.md](../README.md) for installation and usage instructions.
