--- a/releases/1.4.1.md
+++ b/releases/1.4.1.md
@@ -2,6 +2,9 @@
 
 ## Changes in this release
 
+- new: public release script to push to public  - ./public-release.sh init - Initialize public-release branch   - ./public-release.sh update - Update with latest changes from main   - ./public-release.sh push - Push to public repository   - ./public-release.sh release v1.0.0 - Create tagged release   - ./public-release.sh status - Show branch status
+- updates for release 1.4.1
+- chore: bump version to 1.4.1 for release
 - chore: post-release cleanup and settings updates
 - chore: bump version to 1.4.0 for release
 - fix: resolve MCP server protocol errors by removing stdout    interference
@@ -9,9 +12,6 @@
 - Update: Parity Refactor no longer supports backwards compatibility/migration requirement.
 - update (docs): adding feature parity refactoring plan.
 - re adding code of conduct and contributing.
-- chore: bump version to 1.3.0 for release
-- feat(mcp): enhance board creation and card handling
-- feat(mcp): improve consistency between batch and single card operations
 
 ## Getting Started
 See the [README.md](../README.md) for installation and usage instructions.
